Project

General

Profile

Actions

Fix #48802

closed

mds: define CephFS errors that replace standard errno values

Added by Patrick Donnelly over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
High
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
pacific
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, Common/Protocol, MDS
Labels (FS):
task(easy)
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

CephFS protocol depends on the errno numbers which may vary by operating system. Copy the Linux values we use into include/fs_types.h with "CEPHFS_E" prefix. When done, we should be able to stop including "errno.h" in the MDS/Client.


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #49608: pacific: mds: define CephFS errors that replace standard errno valuesResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 3 years ago

  • Target version changed from v16.0.0 to v17.0.0
  • Backport set to pacific,octopus,nautilus
Actions #2

Updated by Milind Changire about 3 years ago

  • Status changed from New to In Progress
  • Pull request ID set to 39354
Actions #3

Updated by Patrick Donnelly about 3 years ago

  • Status changed from In Progress to Pending Backport
  • Backport changed from pacific,octopus,nautilus to pacific
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49608: pacific: mds: define CephFS errors that replace standard errno values added
Actions #5

Updated by Loïc Dachary about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF