mds/client: create cehfs errno aliases

Replace system errno macros with cephfs aliases

Fixes: https://tracker.ceph.com/issues/48802
Signed-off-by: Milind Changire <mchangir@redhat.com>